FreeST/test/Programs/ValidTests/Lists/ListIndexing/ListIndexing.fst
import List

main : Bool
main =
    True