FreeST/test/Programs/InvalidTests/Modules/ModuleMismatchDepth1/ModuleMismatchDepth1.fst
module ModuleMismatchDepth1 where

import Depth1Mismatch

main : Bool
main = bool
